2010-08-13  MIYAMUKO Katsuyuki

	* 検索結果を保持する構造体と他の構造体で似ているスロットは
	名前などをできる限り合わせるようにした

	* 検索結果を保持する構造体名を変更
	users => searched-user
	repos => searched-repo

	* 構造体のアクセッサと API を区別しにくいので、API は動詞で
	始めるようにした。
	また、シンボル名には github- という prefix を付けないようにした。
	例) github-repos-show => show-repo

2010-08-12  MIYAMUKO Katsuyuki

	* api/network.l: JSON オブジェクトではなく構造体を返すようにした

	* api/gist-unofficial.l (gist-mine, gist-mine1): 関数名を変更
	- gist-id-list-all => gist-mine
	- gist-id-list     => gist-mine1

	* api/gist-unofficial.l (gist-revisions, gist-star-p): 関数を追加
	- gist-revisions: Gist のリビジョンの sha1 のリストを返す
	- gist-star-p: Gist にスターをつけたなら t

	* api/gist.l (gist-meta, gist-list): JSON オブジェクトではなく構造体を返すようにした

2010-08-11  MIYAMUKO Katsuyuki

	* api/repo.l, api.user.l: JSON オブジェクトではなく構造体を返すようにした

	* api/types.l: github-public-key などは repo.l と user.l から使うため、
	構造体の定義は types.l にまとめるようにした。

	* api/issues.l: JSON オブジェクトではなく構造体を返すようにした

2010-08-07  MIYAMUKO Katsuyuki

	* api/commits.l: ↓と同じ

	* api/object.l: ↓と同じ

	* api/user.l: JSON オブジェクトではなく構造体を返すようにした

	* (github-user-search-by-email, github-users-search): email 指定の
	検索は単一のユーザを返し、query 指定の検索は複数のユーザを返すので
	関数を分けた

2010-07-29  MIYAMUKO Katsuyuki

	* (gist-id-list-all, gist-id-list): 自分の Gist の ID の一覧を取得
	する関数を追加。
	Gist の API では Public な Gist しか取得できないので、Web ページを
	スクレイピングして Public と Private な Gist の ID を取得する。

	* (github-get, github.post): WinHTTP を利用するようにした。
	Gist のブラウザ向けインターフェイスは query の login/token の指定より
	Cookie にあるセッション ID のほうを優先するので Msxml2.XMLHTTP は利用できない。

	* package.l: xml-http-request 1.3.0 以上が必要なので
	バージョンチェックを追加

2010-07-28  MIYAMUKO Katsuyuki

	* api/gist-unofficial.l: Gist API が足りないのでブラウザ向けのインターフェイス
	を利用して API を実装
	- 実装した API
	  - gist-new
	  - gist-edit
	  - gist-delete
	  - gist-comment-add
	  - gist-update-description
	  - gist-star
	  - gist-unstar
	- 複数ファイルにはまだ対応していない

2010-07-27  MIYAMUKO Katsuyuki

	* api/network.l: 一応一通り動くようになった

	* api/gist.l: Gist API を定義。gist- だけで十分ユニークな名前なので
	関数名に github- をつけなかった。
